format code and clean unused import