@@ -2,7 +2,6 @@ package com.leeup.algorithm.datastruct;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * @ClassName ArrayListTest
@@ -22,7 +21,7 @@ public class ArrayListTest {
         //System.out.println(arrayList.toString());
         //System.out.println(arrayList.size());
 
-        ArrayList<Integer> arrayList1 = new ArrayList<Integer>(Arrays.asList(new Integer(12),new Integer(213)));
+        ArrayList<Integer> arrayList1 = new ArrayList<Integer>(Arrays.asList(Integer.valueOf(12), Integer.valueOf(213)));
         arrayList1.add(123);
         arrayList1.add(123);
         arrayList1.add(123);
@@ -36,7 +35,7 @@ public class ArrayListTest {
         arrayList1.add(123);
         arrayList1.add(123);
         arrayList1.add(123);
-        System.out.println(arrayList1.toString());
+        System.out.println(arrayList1);
         System.out.println(arrayList1.size());
     }
 }
